fix positioning on mobile

--- a/app/karaoke/components/pickup/style.scss
+++ b/app/karaoke/components/pickup/style.scss
@@ -9,8 +9,8 @@
   height: 25em;
 
   @media screen and (max-width: 1024px) {
-    transform: translateX(2em);
-    perspective-origin: 150% -20%;
+    transform: translateX(1.5em);
+    perspective-origin: 160% -30%;
     width: 20em;
     height: 20em;
   }
